--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.378.0",
     "next": "14.2.2",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loading-indicators": "^1.0.0",
